fix contact spacing

--- a/block/contact.css
+++ b/block/contact.css
@@ -12,6 +12,7 @@
     font-weight: bold;
     color: #7A3162;
     margin-bottom: 10px;
+    margin-top: 20px;
     text-align: left;
     width: 100%;
 }
@@ -30,6 +31,7 @@
     justify-content: space-between;
     width: 100%;
     gap: 40px;
+    margin-bottom: 50px;
 }
 
 .contact_content {
